--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
       args:
       - RS_VERSION=9.8
       - PHP_MAJOR_VERSION=8.0
-    # restart: always
+    restart: always
     depends_on:
       - db
     volumes:
