fixing mariadb volume issue

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,6 +17,8 @@ services:
   db:
     image: mariadb:10
     restart: always
+    volumes:
+      - db_data:/var/lib/mysql
     environment:
       - MARIADB_ROOT_PASSWORD=root-pw
       - MARIADB_USER=resourcespace_rw
