--- a/apache-config.conf
+++ b/apache-config.conf
@@ -7,6 +7,9 @@
    
   DocumentRoot /var/www/resourcespace/
 
+  <Directory /var/www/resourcespace>
+    Options -Indexes
+  </Directory>
   <Directory /var/www/resourcespace/batch>
     Require all denied
   </Directory>
