--- a/php.ini
+++ b/php.ini
@@ -1,5 +1,6 @@
 ; https://www.resourcespace.com/knowledge-base/systemadmin/install_php_ini
-memory_limit = 999M
+memory_limit = 1G
+max_execution_time = 300
 post_max_size = 999M
 upload_max_filesize = 999M
 short_open_tag = off
