fix: update PHP extensions installation and enhance Apache configuration for filestore security

--- a/apache-config.conf
+++ b/apache-config.conf
@@ -25,6 +25,9 @@
   <Directory /var/www/resourcespace/tests>
     Require all denied
   </Directory>
+  <Directory /var/www/resourcespace/filestore>
+    Require all denied
+  </Directory>
 
   <Directorymatch "^/.*/\.svn/">
       Order 'deny,allow'
